Refactoring: simplify tests of util classes